[package]
name = "certain-map-macros"
version = "0.2.3"
edition = "2021"

authors = ["ChiHai <ihciah@gmail.com>"]
categories = ["rust-patterns", "network-programming"]
description = "A typed map which can make sure item exist"
keywords = ["map", "metainfo", "certainty", "deterministic"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/ihciah/certain-map"

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2.0", features = ["full"] }

[lib]
proc-macro = true
