[package]
name = "certain-map"
version = "0.3.1"
edition = "2021"

authors = ["ChiHai <ihciah@gmail.com>"]
categories = ["rust-patterns", "network-programming"]
description = "A typed map which can make sure item exist"
keywords = ["map", "metainfo", "certainty", "deterministic"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/ihciah/certain-map"

[dependencies]
certain-map-macros = { version = "0.3.0", path = "../certain-map-macros" }
param = { version = "0.1.0" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
